--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,8 +2,14 @@
 .lateral {
     height: 100vh;
     background-color: rgba(148, 2, 77, 0.8);
-    color:beige;
+    color:white;
 }
+
 .centrar{
     margin: 0 auto;
+}
+
+.home {
+    text-decoration: none;
+    color: white;
 }
